--- a/app-prueba/src/app/pages/login/login.page.html
+++ b/app-prueba/src/app/pages/login/login.page.html
@@ -1,21 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="index"></ion-back-button>
-  </ion-buttons>
-    <ion-title>Login</ion-title>
+    <ion-title class="ion-text-center">Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-input labelPlacement="floating" label="Usuario" [(ngModel)]="mdl_user"></ion-input>
-  <ion-input labelPlacement="floating" label="Contraseña" [(ngModel)]="mdl_pass"></ion-input>
-  <div class="ion-margin-top">
-    <ion-button color="success" class="ion-margin-start"  (click)="login()">
-      ingresar
-    </ion-button>
-  </div>
-  <ion-button class="ion-margin-top" (click)="crearusuario()">
+  <ion-input labelPlacement="floating" label="Contraseña" [(ngModel)]="mdl_pass" class="ion-margin-bottom"></ion-input>
+ <ion-button expand="block" (click)="login()" color="success">
+    Ingresar
+  </ion-button>
+  <ion-button expand="block" (click)="crearusuario()">
     Crear Cuenta
   </ion-button>
 </ion-content>
