--- a/app-prueba/src/app/pages/perfil/perfil.page.html
+++ b/app-prueba/src/app/pages/perfil/perfil.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="end">
-      <ion-button slot="icon-only">
+      <ion-button slot="icon-only" (click)="volver()">
         <ion-icon name="exit-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
