--- a/app-prueba/src/app/pages/contenido/contenido.page.html
+++ b/app-prueba/src/app/pages/contenido/contenido.page.html
@@ -8,12 +8,12 @@
         <ion-icon name="exit-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Bienvenido: {{mdl_nombre}} </ion-title>
+    <ion-title style="width: 100%;">Contenido</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-title>
-    un monton de weas
+    Bienvenido: {{mdl_nombre}}
   </ion-title>
 </ion-content>
