--- a/app-prueba/src/app/pages/crearusuario/crearusuario.page.html
+++ b/app-prueba/src/app/pages/crearusuario/crearusuario.page.html
@@ -3,37 +3,25 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="login"></ion-back-button>
     </ion-buttons>
-    <ion-title>crearusuario</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-title class="ion-padding ion-text-center">
-    Crea tu usuario!
-  </ion-title>
-  <ion-list class="ion-padding">
-    <ion-item class="ion-margin-bottom">
-      <ion-input labelPlacement="floating" [(ngModel)]="mdl_correo">
-        <div slot="label">Correo</div>
-      </ion-input>
-    </ion-item>
-    <ion-item class="ion-margin-top">
-      <ion-input labelPlacement="floating" [(ngModel)]="mdl_nombre">
-        <div slot="label">Nombres</div>
-      </ion-input>
-    </ion-item>
-    <ion-item class="ion-margin-top">
-      <ion-input labelPlacement="floating" [(ngModel)]="mdl_contrasena1">
-        <div slot="label">Contraseña</div>
-      </ion-input>
-    </ion-item>
-    <ion-item class="ion-margin-top">
-      <ion-input labelPlacement="floating" [(ngModel)]="mdl_contrasena2">
-        <div slot="label">Confirmar Contraseña</div>
-      </ion-input>
-    </ion-item>
-  </ion-list>
-  <ion-button expand="block" class="ion-padding" (click)="crearcuenta()">
-    Crear cuenta!
-  </ion-button>
+  <div style="height: 15%;"></div>
+  <ion-card class="centerLogin ion-padding">
+    <ion-title class="ion-padding ion-text-center" style="color: white;">Crea tu usuario!</ion-title>
+        <ion-input labelPlacement="floating" label="Correo" [(ngModel)]="mdl_correo"></ion-input>
+        <ion-input labelPlacement="floating" label="Nombres" [(ngModel)]="mdl_nombre"></ion-input>
+        <ion-input labelPlacement="floating" label="Contraseña" [(ngModel)]="mdl_contrasena1"></ion-input>
+        <ion-input labelPlacement="floating" label="Confirmar Contraseña" [(ngModel)]="mdl_contrasena2" (ngModelChange)="boton()"></ion-input>
+    <ion-button expand="block" class="ion-padding" (click)="crearcuenta()" [disabled]="!activo" [fill]="relleno">
+      Crear cuenta!
+    </ion-button>
+  </ion-card>
+  <ion-toast
+    [isOpen]="isToastOpen"
+    [message]="mensaje"
+    [duration]="2000"
+    (didDismiss)="setOpen(false)"
+  ></ion-toast>
 </ion-content>
