--- a/app-prueba/src/app/pages/login/login.page.html
+++ b/app-prueba/src/app/pages/login/login.page.html
@@ -8,7 +8,9 @@
   <div class="fullheight"></div>
   <ion-card class="centerLogin ion-padding">
     <ion-input labelPlacement="floating" label="Usuario" [(ngModel)]="mdl_user"></ion-input>
-    <ion-input labelPlacement="floating" label="Contraseña" [(ngModel)]="mdl_pass" class="ion-margin-bottom" (ngModelChange)="boton()"></ion-input>
+    <ion-input type="password" labelPlacement="floating" label="Contraseña" [(ngModel)]="mdl_pass" class="ion-margin-bottom" (ngModelChange)="boton()">
+      <ion-input-password-toggle slot="end" color="dark"></ion-input-password-toggle>
+    </ion-input>
     <ion-button expand="block" (click)="login()" color="success" [disabled]="!activo" [fill]="relleno">
       Ingresar
     </ion-button>
