--- a/app-prueba/src/app/pages/contenido/contenido.page.html
+++ b/app-prueba/src/app/pages/contenido/contenido.page.html
@@ -16,6 +16,49 @@
   <ion-title>
     Bienvenido: {{mdl_nombre}}
   </ion-title>
+  <ion-card class="ion-margin-top">
+    <ion-grid class="ion-text-center">
+      <ion-row>
+        <ion-col>
+          <ion-button fill="clear" color="medium">
+            <ion-icon slot="icon-only" name="book"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button fill="clear" color="medium">
+            <ion-icon slot="icon-only" name="briefcase"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button fill="clear" color="medium">
+            <ion-icon slot="icon-only" name="information-circle"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-button fill="clear" color="medium">
+            <ion-icon slot="icon-only" name="at-circle"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button fill="clear" color="medium">
+            <ion-icon slot="icon-only" name="chatbox"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button fill="clear" color="medium">
+            <ion-icon slot="icon-only" name="accessibility"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
+  <ion-card class="ion-text-center">
+    <iframe class="ion-padding" width="auto" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=bDc0gmOzOpGlXPDj&autoplay=1&mute=1" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </ion-card>
   <ion-modal trigger="abrir" [initialBreakpoint]="1" [breakpoints]="[0, 1]">
     <ng-template>
       <div class="ion-text-center">
